<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_margin="15dp"
    android:padding="6dp"
    app:cardCornerRadius="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="#C8DBFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="7dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="165dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:cropToPadding="true"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afganistan"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@android:color/holo_green_dark"/>
            <TextView
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/capital_iraq"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/region_asia"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/subregion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_region_southern_asia"
                android:textSize="23dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/border_pak_iraq_afg_ind_nepal"
                android:textSize="23sp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_hindi_urdu_tamil"
                android:textSize="23dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
